--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p id='lesson'>HOW TO LESSON</p>
       <div class='img'>
         <div class='im1'>
-        <img src="./IMG/1.png" alt="">
+        <img src="./https://github.com/ty-05/ty-05.github.io/blob/main/1.png?raw=true" alt="">
         <p>HTML</p>
         </div>
         <div class='im1'>
