--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <p id='lesson'>HOW TO LESSON</p>
       <div class='img'>
         <div class='im1'>
-        <img src="./img/2.png" alt="">
+        <img src="../img/1.png" alt="">
         <p>HTML</p>
         </div>
         <div class='im1'>
-        <img src="./IMG/2.png" alt="">
+        <img src="../img/2.png" alt="">
         <p>PHP</p>
         </div>
         <div class='im1'>
-        <img src="./IMG/3.png" alt="">
+        <img src="../img/3.png" alt="">
         <p>RUBY</p>
         </div>
         <div class='im1'>
-        <img src="./IMG/4.png" alt="">
+        <img src="../img/4.png" alt="">
         <p>SWIFT</p>
       </div>
   </div>
